banking-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-app
  template:
    metadata:
      labels:
        app: bank-app
      annotations:
        iam.gke.io/gcp-service-account: bank-app-sa@alpine-anvil-473102-c4.iam.gserviceaccount.com
    spec:
      serviceAccountName: ksa-bank-app
      containers:
      - name: web
        image: northamerica-northeast1-docker.pkg.dev/alpine-anvil-473102-c4/bank-repo/bank-app:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      # Optional: Cloud SQL Proxy sidecar if you couldn't get private IP
      # - name: cloud-sql-proxy
      #   image: gcr.io/cloudsql-docker/gce-proxy:1.33.3
      #   args: ["/cloud_sql_proxy", "-instances=<PROJECT>:northamerica-northeast1:bank-postgres=tcp:5432", "-enable_iam_login"]
